# rust_rss_reader

./: Cargo.toml
config/: feeds.toml
src/: main.rs
src/config/: config.rs
src/config_builder/: app_config.rs
src/web/: html_render.rs  mod.rs  parser.rs  web.rs
